apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@batch.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/batch.graphql
---
{
    "one_Query_users_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /users",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.users),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://localhost:4001/api,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users",
                            location: 0..6,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..2,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_2,
        request_variables: {},
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: Some(
            ConnectorErrorsSettings {
                message: None,
                extensions: None,
            },
        ),
    },
    "one_User_0": Connector {
        id: ConnectId {
            label: "one.json http: POST /users-batch",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: Type(
                ObjectTypeDefinitionDirectivePosition {
                    type_name: "User",
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://localhost:4001/api,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/users-batch",
                            location: 0..12,
                        },
                    ),
                ],
            },
            method: Post,
            headers: {},
            body: Some(
                Named(
                    SubSelection {
                        selections: [
                            Path {
                                alias: Some(
                                    Alias {
                                        name: WithRange {
                                            node: Field(
                                                "ids",
                                            ),
                                            range: Some(
                                                0..3,
                                            ),
                                        },
                                        range: Some(
                                            0..4,
                                        ),
                                    },
                                ),
                                inline: false,
                                path: PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $batch,
                                                range: Some(
                                                    5..11,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            12..14,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            14..14,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    11..14,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            5..14,
                                        ),
                                    },
                                },
                            },
                        ],
                        range: Some(
                            0..14,
                        ),
                    },
                ),
            ),
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "name",
                            ),
                            range: Some(
                                3..7,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "username",
                            ),
                            range: Some(
                                8..16,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..16,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            TypeBatch,
        ),
        spec: V0_2,
        request_variables: {
            $batch,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
        error_settings: Some(
            ConnectorErrorsSettings {
                message: None,
                extensions: None,
            },
        ),
    },
}
