apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@carryover.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/carryover.graphql
---
{
    "one_Query_ts_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /t",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.ts),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/t",
                            location: 0..2,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            origin: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "tagged",
                            ),
                            range: Some(
                                3..9,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "hidden",
                            ),
                            range: Some(
                                10..16,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "custom",
                            ),
                            range: Some(
                                17..23,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "authenticated",
                            ),
                            range: Some(
                                24..37,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "requiresScopes",
                            ),
                            range: Some(
                                38..52,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "policy",
                            ),
                            range: Some(
                                53..59,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "overridden",
                            ),
                            range: Some(
                                60..70,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..70,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
    },
    "one_Query_t_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /t/{$args.id}",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.t),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/t/",
                            location: 0..3,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $args,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            6..8,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            8..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..8,
                                        ),
                                    },
                                },
                            ),
                            location: 4..12,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            origin: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "tagged",
                            ),
                            range: Some(
                                3..9,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "hidden",
                            ),
                            range: Some(
                                10..16,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "custom",
                            ),
                            range: Some(
                                17..23,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "authenticated",
                            ),
                            range: Some(
                                24..37,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "requiresScopes",
                            ),
                            range: Some(
                                38..52,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "policy",
                            ),
                            range: Some(
                                53..59,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "overridden",
                            ),
                            range: Some(
                                60..70,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..70,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
    },
    "one_T_r_0": Connector {
        id: ConnectId {
            label: "one.json http: GET /t/{$this.id}/r",
            subgraph_name: "one",
            source_name: Some(
                "json",
            ),
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(T.r),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: HttpJsonTransport {
            source_url: Some(
                http://example/,
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/t/",
                            location: 0..3,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            6..8,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            8..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..8,
                                        ),
                                    },
                                },
                            ),
                            location: 4..12,
                        },
                    ),
                    Constant(
                        Constant {
                            value: "/r",
                            location: 13..15,
                        },
                    ),
                ],
            },
            method: Get,
            headers: {},
            body: None,
            origin: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..2,
                ),
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
        request_headers: {},
        response_headers: {},
        batch_settings: Some(
            ConnectorBatchSettings {
                max_size: None,
            },
        ),
    },
}
