apollo-federation/src/sources/connect/expand/tests/snapshots/connectors@directives.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/directives.graphql
---
{}
